Проверить UserCardController и с ним связанные моменты в openapi.yaml - Get card by id у юзера возвращает детально о карте в.т.ч. номер карты -> нужен для операции transfer - Убран not null constraint у столбца processor_user_id таблицы card_block_request, чтобы операция requestBlock правильно работала - Изменены сообщение об ошибках
