# src/main/resources/static/openapi/openapi.yaml
@@ -6,104 +6,6 @@ servers:
   - url: http://localhost:8080
     description: Generated server url
 paths:
-  /api/v1/users/me/cards/{cardId}/request-block:
-    post:
-      tags:
-        - user-card-controller
-      operationId: requestBlock
-      parameters:
-        - name: cardId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-            exclusiveMinimum: 0
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            'application/json':
-              schema:
-                type: object
-        "404":
-          description: Not Found
-          content:
-            'application/json':
-              schema:
-                type: object
-        "409":
-          description: Conflict
-          content:
-            'application/json':
-              schema:
-                type: object
-        "503":
-          description: Service Unavailable
-          content:
-            'application/json':
-              schema:
-                type: object
-        "401":
-          description: Unauthorized
-          content:
-            'application/json':
-              schema:
-                type: object
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                type: object
-  /api/v1/users/me/cards/transfer:
-    post:
-      tags:
-        - user-card-controller
-      operationId: transferMoney
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/TransferBetweenCardsRequest"
-        required: true
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            'application/json':
-              schema:
-                type: object
-        "404":
-          description: Not Found
-          content:
-            'application/json':
-              schema:
-                type: object
-        "409":
-          description: Conflict
-          content:
-            'application/json':
-              schema:
-                type: object
-        "503":
-          description: Service Unavailable
-          content:
-            'application/json':
-              schema:
-                type: object
-        "401":
-          description: Unauthorized
-          content:
-            'application/json':
-              schema:
-                type: object
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                type: object
   /api/v1/auth/signup:
     post:
       tags:
@@ -337,159 +239,6 @@ paths:
             'application/json':
               schema:
                 $ref: "#/components/schemas/GetCreatePatchUserResponse"
-  /api/v1/users/me/cards:
-    get:
-      tags:
-        - user-card-controller
-      operationId: getMyAllCards
-      parameters:
-        - name: filters
-          in: query
-          required: true
-          schema:
-            $ref: "#/components/schemas/CardSpecification"
-        - name: pageable
-          in: query
-          required: true
-          schema:
-            $ref: "#/components/schemas/Pageable"
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            'application/json':
-              schema:
-                type: object
-        "404":
-          description: Not Found
-          content:
-            'application/json':
-              schema:
-                type: object
-        "409":
-          description: Conflict
-          content:
-            'application/json':
-              schema:
-                type: object
-        "503":
-          description: Service Unavailable
-          content:
-            'application/json':
-              schema:
-                type: object
-        "401":
-          description: Unauthorized
-          content:
-            'application/json':
-              schema:
-                type: object
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/PagedModelGetCreatePatchCardResponse"
-  /api/v1/users/me/cards/{cardId}:
-    get:
-      tags:
-        - user-card-controller
-      operationId: getById
-      parameters:
-        - name: cardId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-            exclusiveMinimum: 0
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            'application/json':
-              schema:
-                type: object
-        "404":
-          description: Not Found
-          content:
-            'application/json':
-              schema:
-                type: object
-        "409":
-          description: Conflict
-          content:
-            'application/json':
-              schema:
-                type: object
-        "503":
-          description: Service Unavailable
-          content:
-            'application/json':
-              schema:
-                type: object
-        "401":
-          description: Unauthorized
-          content:
-            'application/json':
-              schema:
-                type: object
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/GetCreatePatchCardResponse"
-  /api/v1/users/me/cards/{cardId}/balance:
-    get:
-      tags:
-        - user-card-controller
-      operationId: getBalance
-      parameters:
-        - name: cardId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-            exclusiveMinimum: 0
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            'application/json':
-              schema:
-                type: object
-        "404":
-          description: Not Found
-          content:
-            'application/json':
-              schema:
-                type: object
-        "409":
-          description: Conflict
-          content:
-            'application/json':
-              schema:
-                type: object
-        "503":
-          description: Service Unavailable
-          content:
-            'application/json':
-              schema:
-                type: object
-        "401":
-          description: Unauthorized
-          content:
-            'application/json':
-              schema:
-                type: object
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/PairBigDecimal"
 components:
   schemas:
     SignupUserRequest:
